mplot 0.7.9 [2017-11-03]
------------------------

* Random seed parameter for reproducible results


mplot 0.7.8 [2016-08-17]
------------------------

* reimplemented classic plots in ggplot2
* classic plots are now default (reviewer feedback)
* improved documentation
    - more detail about procedures
    - more detail about plotting methods
* fixed the passing of weights for weighted models
* can now obtain full loss v dimension which="lvk"
  plots for glms
* vis() default is now nbest="all".
* experimental support for glmulti as a backend
  instead of bestglm for glms for the vis function.
  This enables users to enforce marginality constraints.

mplot 0.7.6 [2016-05-20]
------------------------

* maintenance, larger update coming soon


mplot 0.7.5 [2015-11-05]
------------------------

* added fev and wallabies dataset


mplot 0.7.4 [2015-10-10]
------------------------

* added tag option to googleVis plots to facilitate easier
  plotting in rmarkdown documents.
* citation updated to reference arXiv article
* bootstrapping glmnet (bglmnet) function refined and
  added to the mplot() shiny interface

mplot 0.7.1 [2015-09-09]
------------------------

* Fix for undefined globals (CRAN submission)

mplot 0.7.0 [2015-09-08]
------------------------

* Release to coincide with JSS article
* Implements "all" for vis function
* Improved blmnet plots
* Consistency with interactive plotting methods
* Improved documentation

mplot 0.6.5 [2015-07-11]
------------------------

* Numerous refinements including consistency of 
  style between the classic plots
* ylim argument for classic boot and lvk plots
* legend.position argument for classic af plots

mplot 0.6.0 [2015-06-10]
------------------------

* First CRAN release
* Reimplemented vis function to 
  avoid massive memory use for moderate model
  sizes.  Now runs much faster and leaner.


mplot 0.5.5 [2015-04-10]
------------------------

* mplot interface now uses shinydashboard