@@ -1,7 +1,7 @@
 Package: mplot
 Type: Package
 Title: Graphical Model Stability and Variable Selection Procedures
-Version: 0.7.9
+Version: 0.8.0
 Date: 2017-11-03
 Authors@R: c(person("Garth", "Tarr", role = c("aut", "cre"), email = "garth.tarr@gmail.com"), person("Samuel", "Mueller", role = "aut", email = "samuel.mueller@sydney.edu.au"), person("Alan H", "Welsh", role = "aut", email = "alan.welsh@anu.edu.au"))
 Description: Model stability and variable inclusion plots [Mueller and Welsh
