@@ -138,7 +138,7 @@
       </header>
 
       <div class="page-header">
-  <h1>Articles <small>version&nbsp;0.7.9-3</small></h1>
+  <h1>Articles <small>version&nbsp;0.8.0</small></h1>
 </div>
 
 <div class="row">
