@@ -155,7 +155,7 @@ http://arxiv.org/abs/1509.07583&gt;.
 
 Tarr G, Mueller S and Welsh A (2017). _mplot: graphical model
 stability and variable selection procedures_. R package version
-0.7.9-3, &lt;URL: https://github.com/garthtarr/mplot&gt;.
+0.8.0, &lt;URL: https://github.com/garthtarr/mplot&gt;.
 
 To see these entries in BibTeX format, use 'print(&lt;citation&gt;,
 bibtex=TRUE)', 'toBibtex(.)', or set
@@ -174,7 +174,7 @@ bibtex=TRUE)', 'toBibtex(.)', or set
   title = {{mplot}: graphical model stability and variable selection procedures},
   author = {Garth Tarr and Samuel Mueller and Alan Welsh},
   year = {2017},
-  note = {R package version 0.7.9-3},
+  note = {R package version 0.8.0},
   url = {https://github.com/garthtarr/mplot},
 }</code></pre>
 </div>
