@@ -142,7 +142,7 @@
     <div class="page-header">
       <h1>
         Reference
-        <small>version&nbsp;0.7.9-3</small>
+        <small>version&nbsp;0.8.0</small>
       </h1>
     </div>
 
